--- a/_config.yml
+++ b/_config.yml
@@ -118,6 +118,7 @@ exclude:
   - www.21ccom.net_scraping_records.txt
   - www.21ccom.net_external_links.txt
   - www.21ccom.net_visited_records.txt
+  - 21ccom_net_all.txt
   - program-think.blogspot.com*
   - debug.sh
   - perform.js
