--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ description: 在大变革时代寻找共识
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar:  # /images/apple-touch-icon.png #
 
-barcode: /21ccom/images/21ccom.png
+barcode: https://i.imgur.com/2ix49T7.png
 
 # Tabs in header. There are 'Blog', 'About', 'Archive', 'Tags'
 # and URL Link(e.g. 'Theme' tab below) tabs. If you don't need one, just delete
